kubernetes/apps/istio-system/gateway/referencegrant.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: istio-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-system
  to:
    - group: ""
      kind: Secret
      name: cert-manager-public-prod-tls
    - group: ""
      kind: Secret
      name: cert-manager-local-tls
