kubernetes/apps/istio-system/gateway/gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
spec:
  gatewayClassName: istio
  # For now listeners stuck on "waiting for controller"
  # allowedListeners:
  #   namespaces:
  #     from: All
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${PUBLIC_DOMAIN}
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${LOCAL_DOMAIN}
      name: http-local
      port: 80
      protocol: HTTP

    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${PUBLIC_DOMAIN}
      name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-manager-public-prod-tls
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${LOCAL_DOMAIN}
      name: https-local
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-manager-local-tls

    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: http-wildcard
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${LOCAL_DOMAIN}"
      name: http-wildcard-local
      port: 80
      protocol: HTTP

    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: https-wildcard
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-manager-public-prod-tls
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${LOCAL_DOMAIN}"
      name: https-wildcard-local
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-manager-local-tls

    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: 8080-https-wildcard
      port: 8080
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-manager-public-prod-tls

    - allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
      name: samba
      port: 445
      protocol: TCP

    - allowedRoutes:
        kinds:
          - kind: TLSRoute
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: 5432-tls-wildcard
      port: 5432
      protocol: TLS
      tls:
        mode: Passthrough
        certificateRefs:
          - name: cert-manager-public-prod-tls
    - allowedRoutes:
        kinds:
          - kind: TLSRoute
        namespaces:
          from: All
      hostname: "*.${LOCAL_DOMAIN}"
      name: 5432-tls-wildcard-local
      port: 5432
      protocol: TLS
      tls:
        mode: Passthrough
        certificateRefs:
          - name: cert-manager-local-tls
