kubernetes/apps/istio-system/gateway/metube.authorizationpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/security.istio.io/authorizationpolicy_v1.json
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: gateway-metube
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - metube.*
